refactor : 테스트 코드 조회 임시 수정